--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ Chapters (click on timecodes) :
 </div>
 
 <div>
-↓ Bad media call.
+↓ Bad media call. Alas, Chrome won't crash it until any interaction.
 
-    <cpu-audio data-title="Samba Résille live (2003)" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://dascritch.net/">
+    <cpu-audio data-title="This player must crash" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://dascritch.net/">
         <!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
         <audio controls id="oups">
             <source src="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg"  type="audio/mpeg" />
