Firefox never display any error

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </div>
 
 <div>
-	↓ Bad media call. Alas, Chrome won't crash it until any interaction.
+	↓ Bad media call. Alas, Chrome won't crash it until any interaction, Firefox never display any error.
 
 	<cpu-audio data-title="This player must crash" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://dascritch.net/">
 		<!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
