--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <body>
 <div>
+	Page demo for <a href="https://github.com/dascritch/cpu-audio">CPU-Audio</a> project. 
+</div>
+
+<div>
 	<cpu-audio data-title="Ex0085 Le Mystère Enigma" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
 	data-canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma">
 		<!-- Pour des raisons  de compatibilité arrière, il *faut* garder la balise <audio controls> dans la déclaration. -->
