--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -372,7 +372,7 @@ a {
 	border-right: 4px solid transparent;
 } 
 
-@media screen and (max-width: 640px) {
+@media (max-width: 640px) , @element .cpu-audio and (max-width: 640px) {
 
 	.nosmall {
 		display : none;
@@ -392,7 +392,7 @@ a {
 		height : 8px ;
 	}
 }
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) , @element .cpu-audio and (max-width: 640px) {
 	.notiny {
 		display : none;
 	}
@@ -401,7 +401,7 @@ a {
 		flex : 1 0 80px;
 	}
 }
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) , @element .cpu-audio and (max-width: 640px) {
 	.elapse {
 		display : none;
 	}
