--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -16,7 +16,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-project repository : https://github.com/dascritch/ondemiroir-audio-tag
+project repository : https://github.com/dascritch/cpu-audio
 blog post : http://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-moment-d-un-sonore
 
 -->
