--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 </div>
 
 <div>
-	<cpu-audio data-title="Ex0085 Le Mystère Enigma" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
-	data-canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma">
+	<cpu-audio 
+		data-title="Ex0085 Le Mystère Enigma"
+		data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
+		data-canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma"
+		data-twitter="@cpuprogramme">
 		<!-- Pour des raisons  de compatibilité arrière, il *faut* garder la balise <audio controls> dans la déclaration. -->
 		<audio controls id="emission">
 			<source src="https://dascritch.net/vrac/Emissions/CPU/0085-CPU%2817-05-18%29.ogg" type="audio/ogg">
@@ -68,8 +71,12 @@
 
 <div>
 	Aspect changes at 640px and 320px wide; We are waiting @element implementation to complete this.
-	<cpu-audio data-title="Samba Résille live (2003)" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg"
-	 	data-canonical="https://dascritch.net/">
+	<cpu-audio 
+		data-title="Au carnaval avec Samba Résille (2003)"
+		data-poster="https://dascritch.net/vrac/.blog2/entendu/.1404-SambaResille_m.jpg"
+		data-canonical="https://dascritch.net/post/2014/04/08/Au-Carnaval-avec-Samba-R%C3%A9sille"
+		data-twitter="@dascritch"
+		>
 	  	<!-- Pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration. -->
 		<audio controls id="live">
 			<source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3" type="audio/mpeg">
